--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "homepage": "https://Chaitanya-087.github.io/find-country",
+  "root":"./build",
+  "clean_urls": false,
+  "routes": {
+    "/**": "index.html"
+  },
   "name": "solution",
   "version": "0.1.0",
   "private": true,
